--- a/index.html
+++ b/index.html
@@ -363,6 +363,55 @@
     </section>
   </main>
 
+  
+    <section class="section section--alt" id="announcements">
+      <div class="container">
+        <div class="section__head">
+          <h2 class="section__title">Анонсы и планы развития книги</h2>
+          <p class="section__subtitle">
+            Проект «Возвращение в игру» развивается вместе со спортивной медициной и практикой реабилитации.
+            Ниже представлены запланированные обновления на 2026 год.
+          </p>
+        </div>
+
+        <div class="grid-3">
+          <article class="card">
+            <h3>Расширение методик</h3>
+            <p>
+              Планируется обновление и расширение методик реабилитации
+              для других видов спорта с учётом различий в нагрузке и травматизме.
+            </p>
+          </article>
+
+          <article class="card">
+            <h3>Новые кейсы и опыт</h3>
+            <p>
+              Будут добавлены новые кейсы травм и примеры лечения
+              с учётом международного опыта в спортивной медицине и реабилитации.
+            </p>
+          </article>
+
+          <article class="card">
+            <h3>Профилактика и возврат</h3>
+            <p>
+              Расширится раздел профилактики травм и поддержки спортсменов
+              на этапе безопасного возвращения в тренировочный и соревновательный процесс.
+            </p>
+          </article>
+        </div>
+
+        <div class="callout">
+          <div class="callout__icon" aria-hidden="true">📘</div>
+          <div class="callout__text">
+            <strong>Анонс на 2026 год:</strong>
+            книга будет дополнена новыми материалами на основе накопленного практического
+            опыта в спортивной медицине и реабилитации.
+          </div>
+        </div>
+      </div>
+    </section>
+
+
   <footer class="footer">
     <div class="container footer__grid">
       <div>
